# apogee

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  cliff.toml  clippy.toml  deny.toml  rust-toolchain.toml
.config/: nextest.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: changelog.yml  ci.yml  close-external-prs.yml  codeql.yml  nightly.yml  pages.yml  release.yml  scorecard.yml  zizmor.yml
apps/apogee/: README.md
apps/apogee-cli/: Cargo.toml
apps/apogee-cli/src/: fixtures.rs  main.rs
apps/apogee-cli/tests/: e2e.rs  patch_e2e.rs
apps/apogee-elevated/: Cargo.toml
apps/apogee-elevated/src/: main.rs
crates/apogee-addons/: Cargo.toml
crates/apogee-addons/src/: lib.rs
crates/apogee-core/: Cargo.toml
crates/apogee-core/src/: command.rs  composition.rs  error.rs  flow.rs  host.rs  lib.rs  model.rs  transport.rs
crates/apogee-core/src/flow/: tests.rs
crates/apogee-core/src/launch/: mod.rs  runtime_backend.rs
crates/apogee-core/src/patch/: mod.rs  patcher_backend.rs
crates/apogee-core/src/store/: mod.rs  tests.rs
crates/apogee-fetch/: Cargo.toml
crates/apogee-fetch/src/: block.rs  download.rs  error.rs  fetcher.rs  headers.rs  intervals.rs  job.rs  journal.rs  lib.rs  limiter.rs  multipart.rs  prealloc.rs  probe.rs  progress.rs  range_source.rs  ranges.rs  scheduler.rs  segmented.rs  spec.rs  util.rs  validator.rs
crates/apogee-fetch/tests/: block_repair.proptest-regressions  block_repair.rs  block_verify.rs  boot_block_hashes.rs  download.rs  fetch_ranges.rs  kill_resume.rs  none_over_tls.rs  peak_rss.rs  range_source.rs  repair_over_http.rs  segmented.rs  segmented_requeue.rs  segmented_resume.rs  verified_file_seal.rs
crates/apogee-fetch/tests/fixtures/: boot_block_hashes.json
crates/apogee-fetch/tests/ui/: verified_file_extern.rs  verified_file_extern.stderr
crates/apogee-otp/: Cargo.toml
crates/apogee-patcher/: Cargo.toml
crates/apogee-patcher/src/: catalog.rs  install.rs  job.rs  lib.rs  preflight.rs  progress.rs  recycler.rs  repair.rs  request.rs  store.rs
crates/apogee-patcher/tests/: install_e2e.rs  repair_e2e.rs
crates/apogee-runtime/: Cargo.toml
crates/apogee-runtime/src/: catalog.rs  dosdevices.rs  dxvk.rs  env.rs  error.rs  extract.rs  install.rs  lib.rs  lifecycle.rs  metadata.rs  plan.rs  progress.rs  session.rs  spawn.rs  supervise.rs
crates/apogee-runtime/src/snapshots/: apogee_runtime__env__tests__full_matrix_is_byte_exact_for_a_fixed_profile.snap
crates/apogee-runtime/tests/: dxvk.rs  extract.rs  peak_rss_extract.rs  prefix.rs  prefix_wine.rs  supervise.rs  supervise_wine.rs
crates/apogee-sqpack/: Cargo.toml
crates/apogee-sqpack/src/: bytes.rs  codec.rs  container.rs  error.rs  game.rs  lib.rs
crates/apogee-sqpack/tests/: real_headers.rs
crates/apogee-sqpack/tests/fixtures/: real_headers.json
crates/apogee-test-support/: Cargo.toml
crates/apogee-test-support/corpus/: README.md  manifest.json
crates/apogee-test-support/examples/: author_tree.rs  prime_corpus.rs
crates/apogee-test-support/fixtures/oracle/: boot.tree.json
crates/apogee-test-support/src/: catalog_sign.rs  chaos.rs  corpus.rs  golden.rs  lib.rs  login_fixtures.rs  oracle.rs  redact.rs  rt.rs  sandbox.rs  transport.rs  tree_manifest.rs
crates/apogee-zipatch/: Cargo.toml
crates/apogee-zipatch/examples/: zipatch_tool.rs
crates/apogee-zipatch/src/: apply.rs  bytes.rs  chunk.rs  datfile.rs  disk.rs  error.rs  fixtures.rs  lib.rs  local.rs  parse.rs  seam.rs
crates/apogee-zipatch/src/index/: format.rs  mod.rs  model.rs  reconstruct.rs  repair.rs  sink.rs  verify.rs
crates/apogee-zipatch/tests/: apply_boot.rs  apply_interrupt.rs  apply_synthetic.rs  corpus_dump.rs  disk_apply.rs  index_corpus.rs  index_repair.rs  index_verify.rs  safe_path_seal.rs
crates/apogee-zipatch/tests/support/: mod.rs
crates/apogee-zipatch/tests/ui/: safe_path_extern.rs  safe_path_extern.stderr  target_path_extern.rs  target_path_extern.stderr
crates/sqex-crypto/: Cargo.toml
crates/sqex-crypto/src/: bytes.rs  crtrand.rs  error.rs  lib.rs  sqex_base64.rs
crates/sqex-crypto/src/args/: key.rs  mod.rs  tests.rs
crates/sqex-crypto/src/args/snapshots/: sqex_crypto__args__tests__plaintext_serialization.snap  sqex_crypto__args__tests__sqex0003_fixed_args.snap
crates/sqex-crypto/src/blowfish/: legacy.rs  mod.rs  standard.rs  tables.rs  tests.rs  variants.rs
crates/sqex-crypto/src/blowfish/snapshots/: sqex_crypto__blowfish__tests__legacy_ciphertext_high_byte.snap  sqex_crypto__blowfish__tests__legacy_le_block.snap  sqex_crypto__blowfish__tests__legacy_schedule_high_byte.snap  sqex_crypto__blowfish__tests__legacy_schedule_low_byte.snap  sqex_crypto__blowfish__tests__standard_be_block.snap
crates/sqex-proto/: Cargo.toml
crates/sqex-proto/src/: bootver.rs  error.rs  frontier.rs  identity.rs  lib.rs  register.rs  time.rs  transport.rs  version.rs
crates/sqex-proto/src/oauth/: mod.rs  scan.rs  tests.rs
crates/sqex-proto/src/oauth/snapshots/: sqex_proto__oauth__tests__full_parse_is_pinned.snap
crates/sqex-proto/src/patchlist/: mod.rs  tests.rs
crates/sqex-proto/src/patchlist/snapshots/: sqex_proto__patchlist__tests__patchlist_game_and_boot.snap
crates/sqex-proto/tests/: boot_check.rs  frontier.rs  oauth.rs  register.rs
crates/sqex-proto/tests/fixtures/: gate_status.json  oauth_login_ok.html  oauth_top.html  oauth_wrong_password.html  register_current.txt
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: apzi_index.rs  fetch_journal.rs  fetch_multipart.rs  index_manifest.rs  oauth_launch_params.rs  oauth_stored.rs  patchlist.rs  runner_manifest.rs  sqex_base64.rs  sqpack_codec.rs  zipatch_apply.rs  zipatch_chunk.rs  zipatch_sqpk.rs
scripts/: audit.sh
site/: index.html
site/indexes/: README.md  (+3 more)
tools/boot-check/: Cargo.toml
tools/boot-check/src/: main.rs
tools/catalog-sign/: Cargo.toml
tools/catalog-sign/src/: main.rs
tools/sqex-proto-probe/: Cargo.toml
tools/sqex-proto-probe/src/: main.rs
(+6 files in other folders)
