[workspace]
resolver = "3"
members  = ["crates/*", "apps/apogee-cli", "apps/apogee-elevated"]

[workspace.package]
edition      = "2024"
rust-version = "1.85"
license      = "TBD"

[workspace.dependencies]
# foundation runtime
thiserror        = "2"
tokio            = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time"] }
reqwest          = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "http2"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
sha1             = "0.10"
sha2             = "0.10"
crc32fast        = "1"
url              = "2"
percent-encoding = "2"
uuid             = { version = "1", features = ["v4", "serde"] }
tracing          = "0.1"
zeroize          = { version = "1", features = ["derive"] }
# domain-adjacent, gated to the crates that use them
keyring          = "3"
totp-rs          = "5"
flate2           = "1"
# dev / test
insta            = "1"
rstest           = "0.23"
proptest         = "1"
wiremock         = "0.6"
assert_cmd       = "2"
predicates       = "3"
tempfile         = "3"
trybuild         = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
exit        = "deny"
dbg_macro   = "deny"
