[workspace]
resolver = "3"
members  = ["crates/*", "apps/apogee-cli", "apps/apogee-elevated"]

[workspace.package]
edition      = "2024"
rust-version = "1.85"
license      = "GPL-3.0-or-later"

[workspace.dependencies]
# foundation runtime
thiserror        = "2"
async-trait      = "0.1"
tokio            = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "io-util", "sync", "time", "net"] }
tokio-stream     = "0.1"
tokio-util       = "0.7"
futures-util     = "0.3"
bytes            = "1"
reqwest          = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate", "http2", "stream"] }
serde            = { version = "1", features = ["derive"] }
serde_json       = "1"
sha1             = "0.10"
sha2             = "0.10"
crc32fast        = "1"
http             = "1"
url              = "2"
percent-encoding = "2"
uuid             = { version = "1", features = ["v4", "serde"] }
tracing          = "0.1"
zeroize          = { version = "1", features = ["derive"] }
# domain-adjacent, gated to the crates that use them
keyring          = "3"
totp-rs          = "5"
flate2           = "1"
# in-repo streaming test HTTP server (the download harness), gated to apogee-test-support
hyper            = { version = "1", features = ["server", "http1"] }
hyper-util       = { version = "0.1", features = ["tokio"] }
http-body-util   = "0.1"
tokio-rustls     = { version = "0.26", default-features = false, features = ["ring", "tls12", "logging"] }
rcgen            = { version = "0.13", default-features = false, features = ["crypto", "ring", "pem"] }
# dev / test
insta            = "1"
rstest           = "0.23"
proptest         = "1"
tempfile         = "3"
# Forward-declared for test types not yet wired up: wiremock backs an HTTP-mock transport,
# assert_cmd + predicates a CLI end-to-end harness, trybuild the compile-fail invariant tests.
wiremock         = "0.6"
assert_cmd       = "2"
predicates       = "3"
trybuild         = "1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic       = "deny"
exit        = "deny"
dbg_macro   = "deny"
