# Its own workspace so the nightly-only, libfuzzer-linked fuzz crate stays out of the main
# workspace's stable build, clippy, and cross-compile jobs.
[workspace]

[package]
name = "sqex-proto-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
sqex-proto = { path = "../crates/sqex-proto" }
sqex-crypto = { path = "../crates/sqex-crypto" }
apogee-runtime = { path = "../crates/apogee-runtime" }
apogee-sqpack = { path = "../crates/apogee-sqpack" }
apogee-zipatch = { path = "../crates/apogee-zipatch" }

[[bin]]
name = "patchlist"
path = "fuzz_targets/patchlist.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oauth_stored"
path = "fuzz_targets/oauth_stored.rs"
test = false
doc = false
bench = false

[[bin]]
name = "oauth_launch_params"
path = "fuzz_targets/oauth_launch_params.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sqex_base64"
path = "fuzz_targets/sqex_base64.rs"
test = false
doc = false
bench = false

[[bin]]
name = "runner_manifest"
path = "fuzz_targets/runner_manifest.rs"
test = false
doc = false
bench = false

[[bin]]
name = "sqpack_codec"
path = "fuzz_targets/sqpack_codec.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zipatch_chunk"
path = "fuzz_targets/zipatch_chunk.rs"
test = false
doc = false
bench = false

[[bin]]
name = "zipatch_sqpk"
path = "fuzz_targets/zipatch_sqpk.rs"
test = false
doc = false
bench = false

[profile.release]
debug = 1
