[package]
name = "apogee-cli"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apogee-core = { path = "../../crates/apogee-core" }
tokio = { workspace = true, features = ["signal"] }
tokio-stream.workspace = true
tokio-util.workspace = true
clap.workspace = true
rpassword.workspace = true

[lints]
workspace = true
