[package]
name = "apogee-cli"
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
apogee-core = { path = "../../crates/apogee-core" }
tokio = { workspace = true, features = ["signal"] }
tokio-stream.workspace = true
tokio-util.workspace = true
clap.workspace = true
rpassword.workspace = true
# Test-only: enabled by the `fixtures` feature to substitute a scripted transport. Never in a release
# build (the feature is off by default).
apogee-test-support = { path = "../../crates/apogee-test-support", optional = true }

[features]
# Substitutes a scripted login transport (driven by `APOGEE_FIXTURE_LOGIN`) for the hermetic e2e.
fixtures = ["dep:apogee-test-support"]
# The wine-present end-to-end test: a real launch through system wine. Implies `fixtures`.
wine-integration = ["fixtures"]

[dev-dependencies]
# Sends SIGINT to the CLI child in the e2e test so it shuts the game down cleanly.
rustix = { workspace = true, features = ["process"] }
tempfile.workspace = true
# The hermetic patch e2e: a chaos server serves a real patch chain the CLI downloads and applies.
apogee-test-support = { path = "../../crates/apogee-test-support" }
apogee-zipatch = { path = "../../crates/apogee-zipatch", features = ["test-fixtures"] }
sha1.workspace = true
url.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "process"] }

[[test]]
name = "e2e"
required-features = ["wine-integration"]

[[test]]
name = "patch_e2e"
required-features = ["fixtures"]

[lints]
workspace = true
