[package]
name = "apogee-elevated"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Reuses zipatch's DiskSink over the elevated stdio protocol (wired later).
apogee-zipatch = { path = "../../crates/apogee-zipatch" }

[lints]
workspace = true
