[package]
name = "apogee-fetch"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
url.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
futures-util.workspace = true
bytes.workspace = true
sha2.workspace = true
crc32fast.workspace = true
tracing.workspace = true
# safe fallocate wrapper for eager preallocation; keeps #![forbid(unsafe_code)] intact.
rustix = { workspace = true, features = ["fs"] }
# Implements zipatch's RangeSource (HttpRangeSource); wired later.
apogee-zipatch = { path = "../apogee-zipatch" }

[features]
# Test-only: exposes Fetcher::from_client so a TLS test can inject a client that trusts a loopback
# test certificate. Never enabled in a release build.
testing = []
# Exposes the journal decoder to the out-of-workspace fuzz target. Never enabled in a release build.
fuzzing = []

[dev-dependencies]
apogee-test-support = { path = "../apogee-test-support" }
tempfile.workspace = true
proptest.workspace = true
trybuild.workspace = true
tokio.workspace = true
tokio-util.workspace = true
sha2.workspace = true
url.workspace = true
reqwest.workspace = true

[[test]]
name = "none_over_tls"
required-features = ["testing"]

[lints]
workspace = true
