[package]
name = "apogee-fetch"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
url.workspace = true
reqwest.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
futures-util.workspace = true
bytes.workspace = true
sha1.workspace = true
sha2.workspace = true
crc32fast.workspace = true
tracing.workspace = true
# HttpRangeSource implements zipatch's RangeSource seam (the only in-workspace edge).
apogee-zipatch = { path = "../apogee-zipatch" }

# safe fallocate wrapper for eager preallocation (Unix only); keeps #![forbid(unsafe_code)] intact.
# Off Unix the preallocation falls back to a plain length set, so rustix is not needed there.
[target.'cfg(unix)'.dependencies]
rustix = { workspace = true, features = ["fs"] }

[features]
# Test-only: exposes Fetcher::from_client so a TLS test can inject a client that trusts a loopback
# test certificate. Never enabled in a release build.
testing = []
# Exposes the journal decoder to the out-of-workspace fuzz target. Never enabled in a release build.
fuzzing = []

[dev-dependencies]
apogee-test-support = { path = "../apogee-test-support" }
# The repair-over-HTTP e2e drives real apply/index/repair; test-fixtures exposes the synthetic patch
# builders. Enabled only for this crate's tests, never in the lib build.
apogee-zipatch = { path = "../apogee-zipatch", features = ["test-fixtures"] }
tempfile.workspace = true
proptest.workspace = true
trybuild.workspace = true
# test-util adds paused virtual time for the limiter and stall-detector tests.
tokio = { workspace = true, features = ["test-util"] }
tokio-util.workspace = true
sha2.workspace = true
url.workspace = true
reqwest.workspace = true
serde_json.workspace = true

[[test]]
name = "none_over_tls"
required-features = ["testing"]

[lints]
workspace = true
