[package]
name = "apogee-runtime"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
ed25519-dalek = { workspace = true }
apogee-fetch = { path = "../apogee-fetch" }

[dev-dependencies]
apogee-test-support = { path = "../apogee-test-support" }

[lints]
workspace = true
