[package]
name = "apogee-runtime"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
serde = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
ed25519-dalek = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
apogee-fetch = { path = "../apogee-fetch" }

# Linux-first: runner download/extract and /proc supervision use unix-only filesystem and syscall
# operations. The windows-gnu cross-build compiles the crate without these; prepare/launch return
# `Unsupported` there.
[target.'cfg(target_os = "linux")'.dependencies]
tar = { workspace = true }
flate2 = { workspace = true }
lzma-rs = { workspace = true }
ruzstd = { workspace = true }
# /proc reads via std::fs; pidfd + signals via rustix, keeping #![forbid(unsafe_code)].
rustix = { workspace = true, features = ["process"] }

[features]
# Gates tests that need a real host `wine`; run only in the wine-present CI job.
wine-integration = []

[dev-dependencies]
apogee-test-support = { path = "../apogee-test-support" }
apogee-fetch = { path = "../apogee-fetch" }
tempfile = { workspace = true }
serial_test = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }

# The extraction integration tests build fixture tarballs in-process (encode side of the decoders).
[target.'cfg(target_os = "linux")'.dev-dependencies]
tar = { workspace = true }
flate2 = { workspace = true }
lzma-rs = { workspace = true }
ruzstd = { workspace = true }

[[test]]
name = "supervise_wine"
required-features = ["wine-integration"]

[[test]]
name = "prefix_wine"
required-features = ["wine-integration"]

[lints]
workspace = true
