[package]
name = "apogee-test-support"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
tempfile.workspace = true
sqex-proto = { path = "../sqex-proto" }
async-trait.workspace = true
# The streaming chaos HTTP server the download tests drive against.
tokio.workspace = true
tokio-stream.workspace = true
tokio-util.workspace = true
hyper.workspace = true
hyper-util.workspace = true
http-body-util.workspace = true
bytes.workspace = true
http.workspace = true
url.workspace = true
sha2.workspace = true
# Recorded-fact tree manifests (relative path, length, sha256) serialize as reviewable JSON.
serde.workspace = true
serde_json.workspace = true
tokio-rustls.workspace = true
rcgen.workspace = true
# Signs synthetic runner/component manifests with a fixed test key so the Ed25519 verify path is
# exercised without a real key in the tree.
ed25519-dalek.workspace = true

[dev-dependencies]
# Drives the chaos server in its own self-test.
reqwest.workspace = true

[lints]
workspace = true
