[package]
name = "apogee-zipatch"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
# IEEE CRC32 over each chunk's type+payload (the container's only integrity check on boot patches).
crc32fast.workspace = true
# Shared compressed-block format lives in sqpack::codec (consumed by the apply engine, next phase).
apogee-sqpack = { path = "../apogee-sqpack" }

[dev-dependencies]
# The corpus-dump gate reads the real boot patches from a primed cache; serde parses the committed
# corpus manifest to learn their digests.
serde = { workspace = true }
serde_json.workspace = true
# Round-trip properties over the field value space (offsets, ids) catch endianness/shift bugs a fixed
# fixture would miss.
proptest.workspace = true
# The boot apply gate applies into a scratch dir and diffs the result against the committed oracle
# tree manifest; tree_manifest lives in test-support (default features, no corpus/apogee-fetch pull).
apogee-test-support = { path = "../apogee-test-support" }
tempfile.workspace = true
# Builds the compressed F:A block payloads the synthetic apply tests decode (raw DEFLATE, no wrapper).
flate2.workspace = true
# Compile-fail proof that SafePath/TargetPath cannot be minted outside the crate.
trybuild.workspace = true

[lints]
workspace = true
