[package]
name = "apogee-zipatch"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
# IEEE CRC32 over each chunk's type+payload and every indexed block's target bytes.
crc32fast.workspace = true
# Shared compressed-block format lives in sqpack::codec (the apply engine decodes F:A blocks through it).
apogee-sqpack = { path = "../apogee-sqpack" }
# DEFLATE for the .apzi index body (the same codec the shared block format uses; no new C linkage).
flate2.workspace = true
# Work-stealing parallelism for the block-index CRC sweep (build's crc pass and verify).
rayon.workspace = true

# Best-effort file preallocation for fresh add-file targets. Linux-only (fallocate); the cross-build
# compiles without it and the reserve hook is a no-op there. `fallocate` is safe, so the crate keeps
# #![forbid(unsafe_code)].
[target.'cfg(target_os = "linux")'.dependencies]
rustix = { workspace = true, features = ["fs"] }

[features]
# Exposes src/fixtures.rs (synthetic patch builders) so this crate's own integration tests and
# apogee-fetch's repair-over-HTTP e2e share one patch-format authority instead of each hand-rolling
# ZiPatch bytes. Test-only; never a default feature (release builds never compile it).
test-fixtures = []

[dev-dependencies]
# The corpus-dump gate reads the real boot patches from a primed cache; serde parses the committed
# corpus manifest to learn their digests.
serde = { workspace = true }
serde_json.workspace = true
# Round-trip properties over the field value space (offsets, ids) catch endianness/shift bugs a fixed
# fixture would miss.
proptest.workspace = true
# The boot apply gate applies into a scratch dir and diffs the result against the committed oracle
# tree manifest; tree_manifest lives in test-support (default features, no corpus/apogee-fetch pull).
apogee-test-support = { path = "../apogee-test-support" }
tempfile.workspace = true
# Compile-fail proof that SafePath/TargetPath cannot be minted outside the crate.
trybuild.workspace = true
# Self dev-dependency: enables `test-fixtures` for this crate's own integration tests without making
# it a default feature, so `cargo test` sees `apogee_zipatch::fixtures` with no extra flags.
apogee-zipatch = { path = ".", features = ["test-fixtures"] }

[lints]
workspace = true
