[package]
name = "sqex-crypto"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
zeroize.workspace = true

[dev-dependencies]
apogee-test-support = { path = "../apogee-test-support" }
insta.workspace = true
rstest.workspace = true
proptest.workspace = true

[lints]
workspace = true
