[package]
name = "sqex-crypto"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
thiserror.workspace = true
zeroize.workspace = true

# The host monotonic clock read; Linux-only so the windows-gnu cross-build never pulls rustix's `time`
# backend (unimplemented there). The tick source is a `todo!()` stub off Linux.
[target.'cfg(target_os = "linux")'.dependencies]
rustix = { workspace = true, features = ["time"] }

[dev-dependencies]
apogee-test-support = { path = "../apogee-test-support" }
insta.workspace = true
rstest.workspace = true
proptest.workspace = true

[lints]
workspace = true
