# Its own workspace so this dev-only live-network tool (reqwest + tokio) stays out of the main
# workspace's build, clippy, and cross-compile jobs. Unlike the login probe it needs no account and
# no secrets: it makes one unauthenticated GET, so it is safe to run in CI as an amber canary.
[workspace]

[package]
name = "boot-check"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
sqex-proto = { path = "../../crates/sqex-proto" }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "gzip", "deflate"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
async-trait = "0.1"
http = "1"
